Fix for pipeline: .toList() not being supported on the stream interface